@@ -182,7 +182,7 @@ queue_initial_tasks(const General_options& options,
     {
       Task_token* next_blocker = new Task_token(true);
       next_blocker->add_blocker();
-      workqueue->queue(new Read_symbols(options, input_objects, symtab, layout,
+      workqueue->queue(new Read_symbols(input_objects, symtab, layout,
 					&search_path, mapfile, &*p, NULL,
 					this_blocker, next_blocker));
       this_blocker = next_blocker;
